[package]
name = "playback-rs"
description = "A very simple audio/song loading and playing library."
version = "0.2.3"
edition = "2021"
authors = ["Ben Heard <benpheard@gmail.com>"]
license = "ISC"
readme = "readme.md"
repository = "https://gitlab.101100.ca/ben1jen/playback-rs/"
keywords = ["music", "sound", "playback", "decode", "decoder"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[dependencies]
color-eyre = "0.6"
cpal = "0.13"
log = "0.4"
samplerate = "0.2"
simplelog = { version="0.12", optional=true }
symphonia = { version="0.5", features=["isomp4", "aac", "alac", "mp3"] }

[[example]]
name = "aplay"
required-features = ["simplelog"]
