[package]
name = "playback-rs"
description = "A very simple audio/song loading and playing library."
version = "0.2.5"
edition = "2021"
authors = ["Ben Heard <benpheard@gmail.com>"]
license = "ISC"
readme = "readme.md"
repository = "https://gitlab.101100.ca/ben1jen/playback-rs/"
keywords = ["music", "sound", "playback", "decode", "decoder"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[dependencies]
color-eyre = "0.6"
cpal = "0.15"
log = "0.4"
rubato = "0.12"
simplelog = { version = "0.12", optional = true }
symphonia = { version = "0.5", features = ["isomp4", "aac", "alac", "mp3"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa-sys = "0.3.1"

[[example]]
name = "aplay"
required-features = ["simplelog"]
